.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Question__c.object
<CustomObject>
    <description>Captures question and answer data related to the service request typically during the creation of a service request</description>
    <fields>
        <fullName>Incap311__Answer_Date_Time__c</fullName>
        <label>Answer Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311__Answer__c</fullName>
        <label>Answer</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Secure__c</fullName>
        <formula>Incap311__Service_Type_Version_Question__r.Incap311__Question__r.Incap311__Is_Secure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Secure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>LegacyId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Incap311__Legacy_Order__c</fullName>
        <description>Order of legacy service question since legacy questions won&apos;t have STVQ. Used for ordering service question related list.</description>
        <label>Legacy Order</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Order__c</fullName>
        <formula>IF(
ISNULL( Incap311__Legacy_Order__c),
Incap311__Service_Type_Version_Question__r.Incap311__Order__c,
Incap311__Legacy_Order__c
)</formula>
        <label>Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Outcome_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outcome Question</label>
        <referenceTo>Incap311__Outcome_Question__c</referenceTo>
        <relationshipLabel>Service Questions</relationshipLabel>
        <relationshipName>Service_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Question_Code__c</fullName>
        <formula>Incap311__Service_Type_Version_Question__r.Incap311__Question__r.Incap311__Flex_Question_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Question_Source_Type__c</fullName>
        <formula>IF(
    NOT(ISBLANK(Incap311__Service_Type_Version_Question__c)),
    &quot;Intake Question&quot;,
    IF(
        NOT(ISBLANK(Incap311__Outcome_Question__c)),
        &quot;Resolution Question&quot;,
        &quot;&quot;
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Question__c</fullName>
        <description>Copy of the question from the related Service Version Type Question that this Service Question references.</description>
        <label>Question</label>
        <length>4800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Request__c</fullName>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Questions</relationshipLabel>
        <relationshipName>Service_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Version_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Type Version Question</label>
        <referenceTo>Incap311__Service_Type_Version_Question__c</referenceTo>
        <relationshipLabel>Service Questions</relationshipLabel>
        <relationshipName>Service_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Question</label>
    <listViews>
        <fullName>Incap311__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SQ-{00000000}</displayFormat>
        <label>Service Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>